@@ -8,5 +8,6 @@ sunuo (0.1.0) unstable; urgency=low
   * repaired pointer arithmetic in Serialization.cs and TileMatrix.cs
   * pass script file names in a temporary files, to go around the
     "argument too long" limitation on most POSIX systems
+  * moved the World.Load() call from ScriptCompiler to Main
 
  --
